# VendingMachine

./: CMakeLists.txt  README.md
data/: VendingMachine.ilk  employee.txt  machineEU.txt  machineNA.txt  technician.txt
include/: items.h  machine.h  main.h  person.h
src/: items.cpp  machine.cpp  main.cpp  person.cpp
tests/: CMakeLists.txt  items.cpp  machine.cpp  person.cpp  tests.cpp
tests/include/: items.h  machine.h  person.h
